--- a/packages/material/scss/toolbar/_index.scss
+++ b/packages/material/scss/toolbar/_index.scss
@@ -5,6 +5,7 @@
 @import "../common/_index.scss";
 @import "../button/_index.scss";
 @import "../popup/_index.scss";
+@import "../menu/_index.scss";
 @import "../icons/_index.scss";
 
 
