fix(daterangepicker): set default width for dateinputs

--- a/packages/default/scss/daterangepicker/_layout.scss
+++ b/packages/default/scss/daterangepicker/_layout.scss
@@ -13,6 +13,10 @@
         *::after {
             box-sizing: border-box;
         }
+
+        .k-dateinput {
+            width: $kendo-daterange-picker-input-width;
+        }
     }
 
 
