--- a/packages/classic/scss/dropdowngrid/_index.scss
+++ b/packages/classic/scss/dropdowngrid/_index.scss
@@ -10,6 +10,7 @@
 @import "../popup/_index.scss";
 @import "../toolbar/_variables.scss";
 @import "../menu/_variables.scss";
+@import "../chip/_variables.scss";
 @import "../grid/_variables.scss";
 
 
