chore(docs): refactor documentation logic so all packages can be documented

--- a/packages/fluent/scss/utils/_layout.scss
+++ b/packages/fluent/scss/utils/_layout.scss
@@ -1,6 +1,6 @@
 @use "_variables.scss" as *;
 
-@use "~@progress/kendo-theme-utils/scss/all.scss" with (
+@use "@progress/kendo-theme-utils/scss/all.scss" with (
     $kendo-utils-border-radius: $kendo-utils-border-radius
 );
 
