--- a/packages/fluent/scss/icon/_layout.scss
+++ b/packages/fluent/scss/icon/_layout.scss
@@ -1,6 +1,6 @@
 @use "_variables.scss" as *;
 
-@use "~@progress/kendo-font-icons/scss/index.scss" with (
+@use "@progress/kendo-font-icons/scss/index.scss" with (
     $ki-embed-font: true,
     $ki-icon-size: var( --kendo-icon-size, 1rem )
 );
