--- a/packages/core/scss/functions/_map.import.scss
+++ b/packages/core/scss/functions/_map.import.scss
@@ -79,3 +79,27 @@
 @function k-map-values( $map ) {
     @return map-values( $map );
 }
+
+/// Returns negative values of a number or numbers in a list.
+/// @param {Map} $map - The map to get the values from.
+/// @return {Map} - A comma separated list of the values in `$map`.
+///
+/// @example scss - Usage
+///   @debug k-map-negate( ( 0: 0, 1: 1px, 2: 2px ) ); // => ("-1": -1px, "-2": -2px)
+@function k-map-negate($map) {
+    $_map-neg: ();
+
+    @if( k-meta-type-of($map) != map ) {
+        @error "expected type of #{$map} is map, was #{k-meta-type-of($map)}";
+    };
+    @each $key, $value in $map {
+        $_key-neg: "-" + $key;
+
+        @if( k-meta-type-of($value) == number and $value != 0) {
+            $_map-neg: k-map-set($_map-neg, $_key-neg, -1 * $value );
+        }
+    }
+
+    @return $_map-neg;
+
+}
