--- a/packages/fluent/scss/colorpalette/_variables.scss
+++ b/packages/fluent/scss/colorpalette/_variables.scss
@@ -1,49 +1,49 @@
 @use "sass:map";
 @use "../core/" as *;
 
-/// Font family of the color palette.
+/// The font family of the ColorPalette.
 /// @group colorpalette
 $kendo-color-palette-font-family: var( --kendo-font-family, inherit ) !default;
-/// Font size of the color palette.
+/// The font size of the ColorPalette.
 /// @group colorpalette
 $kendo-color-palette-font-size: var( --kendo-font-size, inherit ) !default;
-/// Line height of the color palette.
+/// The line height of the ColorPalette.
 /// @group colorpalette
 $kendo-color-palette-line-height: 0 !default;
 
-/// Outline width of the color palette tile.
+/// The outline width of the ColorPalette tile.
 /// @group colorpalette
 $kendo-color-palette-tile-outline-width: 1px !default;
-/// Outline style of the color palette tile.
+/// The outline style of the ColorPalette tile.
 /// @group colorpalette
 $kendo-color-palette-tile-outline-style: solid !default;
-/// Outline color of the color palette tile.
+/// The outline color of the ColorPalette tile.
 /// @group colorpalette
 $kendo-color-palette-tile-outline: transparent !default;
-/// Width of the color palette tile.
+/// The width of the ColorPalette tile.
 /// @group colorpalette
 $kendo-color-palette-tile-width: map.get( $kendo-spacing, 6 ) !default;
-/// Height of the color palette tile.
+/// The height of the ColorPalette tile.
 /// @group colorpalette
 $kendo-color-palette-tile-height: $kendo-color-palette-tile-width !default;
-/// Focus outline color of the color palette tile.
+/// The outline color of the ColorPalette focused tile.
 /// @group colorpalette
 $kendo-color-palette-tile-focus-outline: get-theme-color-var( neutral-130 ) !default;
-/// Focus shadow of the color palette tile.
+/// The shadow of the ColorPalette focused tile.
 /// @group colorpalette
 $kendo-color-palette-tile-focus-shadow: inset 0 0 0 2px $kendo-color-white !default;
-/// Hover outline color of the color palette tile.
+/// The outline color of the ColorPalette hovered tile.
 /// @group colorpalette
 $kendo-color-palette-tile-hover-outline: get-theme-color-var( neutral-20 ) !default;
-/// Hover shadow of the color palette tile.
+/// The shadow of the ColorPalette hovered tile.
 /// @group colorpalette
 $kendo-color-palette-tile-hover-shadow: inset 0 0 0 2px $kendo-color-palette-tile-hover-outline, inset 0 0 0 4px $kendo-color-white !default;
-/// Selected outline color of the color palette tile.
+/// The outline color of the ColorPalette selected tile.
 /// @group colorpalette
 $kendo-color-palette-tile-selected-outline: $kendo-color-palette-tile-hover-outline !default;
-/// Selected shadow of the color palette tile.
+/// The shadow of the ColorPalette selected tile.
 /// @group colorpalette
 $kendo-color-palette-tile-selected-shadow: $kendo-color-palette-tile-hover-shadow !default;
-/// Selected hover outline color of the color palette tile.
+/// The outline color of the ColorPalette selected hover tile.
 /// @group colorpalette
 $kendo-color-palette-tile-selected-hover-outline: $kendo-color-palette-tile-focus-outline !default;
